<resources>
    <string name="app_name">Aula 6</string>
    <string name="boas_vindas">Welcome to the dark side of the moon!</string>
    <string name="titulo_app">Cadastro de Usuario</string>
    <string name="descricao_app">Por favor, insira os dados do usuario</string>
    <string name="edt_nome">Nome de Usuario</string>
    <string name="edt_idade">Idade do Usuario</string>
    <string name="btn_cadastrar">Cadastrar Usuario</string>
    <string name="titulo_user">Boas vindas!</string>
    <string name="desc_user">Confira todas as suas infos aqui:</string>
</resources>