<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/titulo_app"
        android:textColor="@color/colorPrimary"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/descricao_app"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:layout_margin="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescricao"

        >

        <!--           imagens pode ser usado em src ou background-->
        <!--        scaleType = center -> centraliza o icone original-->

        <ImageView
            android:id="@+id/imgUsuario"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:src="@drawable/ic_eevee"
            android:background="@color/white"
            android:scaleType="centerCrop"
            />

        <EditText
            android:id="@+id/edtNomeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_nome"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/edtIdadeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_idade"
            android:inputType="numberDecimal"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            />
        
        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/btn_cadastrar"
            android:textColor="@color/white"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:layout_margin="24dp"
            android:layout_gravity="center_horizontal"
            />


    </LinearLayout>




    <!--    Quem gerencia os recursos e o proprio android, mas como e nossa responsabilidade-->
    <!--Se fosse fazer um app que abre uma camera, ela abriria em toda a tela-->
    <!--    <LinearLayout-->
    <!--    match parent e para ocupar o width e height do parent-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:background="@color/black"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--    quando usa arroba e mais significa que esta adicionando um recurso, no caso esta
    adicionando um id-->
    <!--boas praticas para id -> nome do componente (3 primeiras consoantes) e o tipo-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView2" />-->

</androidx.constraintlayout.widget.ConstraintLayout>